# vPDF

./: CMakeLists.txt  SETUP.md  build.bat  vcpkg.json
cmake/: FindPDFium.cmake
resources/: pdfkill.qrc
resources/theme/: style.qss
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/engine/: IPdfEngine.h  PdfiumEngine.cpp  PdfiumEngine.h
src/operations/: PdfOperations.cpp  PdfOperations.h
src/ui/: CollapsiblePanel.cpp  CollapsiblePanel.h  PageViewer.cpp  PageViewer.h  SidebarMenu.cpp  SidebarMenu.h  ThumbnailPanel.cpp  ThumbnailPanel.h
